CMAKE_MINIMUM_REQUIRED(VERSION 3.20)
PROJECT(iadd)

set(CMAKE_CONFIGURATION_TYPES "Release;Debug" CACHE STRING "" FORCE)
if (MSVC)
	message("********************compiler msvc********************")
	list(APPEND CMAKE_CXX_FLAGS "/Wall /std:c++17 /EHsc /openmp")
	list(APPEND CMAKE_CXX_FLAGS_DEBUG "/Od")
	list(APPEND CMAKE_CXX_FLAGS_RELEASE "/O2 /DNDEBUG")
	# macro NDEBUG will remove all assert
endif ()

set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
FILE(GLOB source *.cpp)
ADD_LIBRARY(${PROJECT_NAME} ${source})

SET_TARGET_PROPERTIES(${PROJECT_NAME}
	PROPERTIES
	ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
	LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
	RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")

# ADD_SUBDIRECTORY(doc EXCLUDE_FROM_ALL)
