CMAKE_MINIMUM_REQUIRED(VERSION 3.20)
PROJECT(demo)

set(CMAKE_CONFIGURATION_TYPES "Release;Debug" CACHE STRING "" FORCE)
if (MSVC)
	message("********************compiler msvc********************")
	list(APPEND CMAKE_CXX_FLAGS "/Wall /std:c++17 /EHsc /openmp")
	list(APPEND CMAKE_CXX_FLAGS_DEBUG "/Od")
	list(APPEND CMAKE_CXX_FLAGS_RELEASE "/O2 /DNDEBUG")
	# macro NDEBUG will remove all assert
endif ()

FILE(GLOB source *.cpp)
ADD_EXECUTABLE(${PROJECT_NAME} ${source})
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC
	../dll)
TARGET_LINK_DIRECTORIES(${PROJECT_NAME} PUBLIC
	../dll/build/lib/Debug)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} iadd)

SET_TARGET_PROPERTIES(${PROJECT_NAME}
	PROPERTIES
	ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
	LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
	RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")

# ADD_SUBDIRECTORY(doc EXCLUDE_FROM_ALL)
